// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTitle does not update title with existing content when pasting HTML 1`] = `
"<!-- fin:heading -->
<h2 class="fin-block-heading">Howdy</h2>
<!-- /fin:heading -->

<!-- fin:heading -->
<h2 class="fin-block-heading">This is a heading.</h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p>This is a paragraph.</p>
<!-- /fin:paragraph -->"
`;

exports[`PostTitle populates empty title with first block content when pasting HTML 1`] = `
"<!-- fin:heading -->
<h2 class="fin-block-heading">This is a heading.</h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p>This is a paragraph.</p>
<!-- /fin:paragraph -->"
`;
